Add support for fastclick.

--- a/app/views/create-event.html
+++ b/app/views/create-event.html
@@ -10,4 +10,4 @@
   <textarea id="event-content" cols="30" rows="10"></textarea>
 </div>
 
-<a href="#/create-event/choose-dates"></a>
+<a href="#/create-event/select-dates" fast-link>Select dates</a>
