--- a/app/views/create-event.html
+++ b/app/views/create-event.html
@@ -1,13 +1,13 @@
-<h2>Create event <a href="" back-button="">Back</a></h2>
+<h2>Create event {{event.name}}<a href="" back-button="">Back</a></h2>
 
 <div class="action">
   <span class="label" for="event-name">Event name</span>
-  <input type="text" id="event-name">
+  <input type="text" id="event-name" ng-model="event.name">
 </div>
 
 <div class="action">
   <span class="label" for="event-content">Event content</span>
-  <textarea id="event-content" cols="30" rows="10"></textarea>
+  <textarea id="event-content" cols="30" rows="10" ng-model="event.description"></textarea>
 </div>
 
 <a href="#/create-event/select-dates" fast-link>Select dates</a>
