--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,2 +1,4 @@
-<h2>Meetup</h2>
-<a href="#/create-event" fast-link>Create event</a>
+<div ng-controller="MainCtrl">
+  <h2>Meetup</h2>
+  <a href="#/create-event" fast-link>Create event</a>
+</div>
