--- a/app/views/create-event.html
+++ b/app/views/create-event.html
@@ -1,4 +1,4 @@
-<div ng-controller="CreateEventCtrl">
+<div>
 <h2>Create event {{event.name}}<a href="" back-button="">Back</a></h2>
 
 <div class="action">
