Start adding sass project.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,1 @@
-body {
-  background: #fafafa;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333;
-}
-
+@import "partials/base";
