--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,1 +1,8 @@
+// base variables
 @import "partials/base";
+
+// Partials
+@import "partials/global";
+@import "partials/create-event";
+@import "partials/mobile";
+@import "partials/desktop";
