--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -1,1 +1,12 @@
-<h1>Hello world</h1>
+<div id="title-bar">
+  <div id="header-logo">
+    <a href="#/" fast-link>
+      <img src="images/logo.png" alt="MeetUp">
+    </a>
+  </div>
+  <div id="header-icon">
+    <a href="#/create-event" fast-link>
+      <img src="images/icon-create.png" alt="MeetUp">
+    </a>
+  </div>
+</div>
