Move mobile detection to CSS.

--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -1,4 +1,4 @@
-<div id="title-bar">
+<div id="title-bar" class="main-content">
   <div id="header-logo">
     <a href="#/" fast-link>
       <img src="images/logo.png" alt="MeetUp">
