--- a/app/styles/partials/_desktop.scss
+++ b/app/styles/partials/_desktop.scss
@@ -1,5 +1,8 @@
-.desktop {
-  #title-bar {
-    width: 70%;
+@media only screen and (min-width: 760px) {
+  .main-content {
+    width: $main-content-width;
+    margin: auto;
   }
 }
+
+
