Fix bug. Add functionality to get days of month separated by weeks.

--- a/app/styles/partials/_desktop.scss
+++ b/app/styles/partials/_desktop.scss
@@ -1,7 +1,8 @@
 @media only screen and (min-width: 760px) {
   .main-content {
     width: $main-content-width;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
