--- a/app/views/create-event.html
+++ b/app/views/create-event.html
@@ -7,6 +7,11 @@
 </div>
 
 <div class="action">
+  <span class="label" for="event-duration">Needed time</span>
+  <input type="number" id="event-duration" ng-model="event.duration">
+</div>
+
+<div class="action">
   <span class="label" for="event-content">Event content</span>
   <textarea id="event-content" cols="30" rows="10" ng-model="event.description"></textarea>
 </div>
