Add calendar with bindings.

--- a/app/views/create-event.html
+++ b/app/views/create-event.html
@@ -18,11 +18,7 @@
 
 <a href="#/create-event/select-dates" fast-link>Select dates</a>
 
-<div class="dates">
-  <span class="label">Dates</span>
-  <ul ng-repeat="date in event.dates">
-    <li>{{date.start | date:'yy/MM/dd'}}</li>
-  </ul>
+<div class="calendar" ng-include="'partials/calendar.html'">
 </div>
 
 <input type="submit" fast-click="saveEvent()">
