--- a/app/views/create-event.html
+++ b/app/views/create-event.html
@@ -18,7 +18,7 @@
 
 <a href="#/create-event/select-dates" fast-link>Select dates</a>
 
-<div class="calendar" ng-include="'partials/calendar.html'">
+<div class="calendar" ng-include="'partials/calendar/full.html'">
 </div>
 
 <input type="submit" fast-click="saveEvent()">
