Update titlebar. Update css.

--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -5,8 +5,11 @@
     </a>
   </div>
   <div id="header-icon">
-    <a href="#/create-event" fast-link>
+    <a href="#/create-event" fast-link ng-show="hasCreate">
       <img src="images/icon-create.png" alt="MeetUp">
+    </a>
+    <a href="#/create-event/time" fast-link ng-show="hasNext">
+      Next
     </a>
   </div>
 </div>
