--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
 <div>
   <h2>Meetup yeay</h2>
-  <a href="#/create-event" fast-link>Create event</a>
+  <button href="#/create-event" fast-link>Create event</button>
 </div>
