Add some tests. Change directory layout.

--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -5,10 +5,10 @@
     </a>
   </div>
   <div id="header-icon">
-    <a href="#/create-event" fast-link ng-show="hasCreate">
+    <a href="#/create-event" class="create-event" fast-link ng-show="hasCreate">
       <img src="images/icon-create.png" alt="MeetUp">
     </a>
-    <a href="#/create-event/time" fast-link ng-show="hasNext">
+    <a href="#/create-event/time" class="next" fast-link ng-show="hasNext">
       Next
     </a>
   </div>
