--- a/app/views/create-event.html
+++ b/app/views/create-event.html
@@ -1,25 +1,4 @@
 <div>
 <h2>Create event {{event.name}}<a href="" back-button="">Back</a></h2>
 
-<div class="action">
-  <span class="label" for="event-name">Event name</span>
-  <input type="text" id="event-name" ng-model="event.name">
-</div>
-
-<div class="action">
-  <span class="label" for="event-duration">Needed time</span>
-  <input type="number" id="event-duration" ng-model="event.duration">
-</div>
-
-<div class="action">
-  <span class="label" for="event-content">Event content</span>
-  <textarea id="event-content" cols="30" rows="10" ng-model="event.description"></textarea>
-</div>
-
-<a href="#/create-event/select-dates" fast-link>Select dates</a>
-
-<div class="calendar" ng-include="'partials/calendar/full.html'">
-</div>
-
-<input type="submit" fast-click="saveEvent()">
-</div>
+<div ui-view=""></div>
