Reduce useless computations.

--- a/app/partials/create-event/select-time.html
+++ b/app/partials/create-event/select-time.html
@@ -1,5 +1,5 @@
 <table>
   <tr ng-repeat="date in event.dates">
-    <td class="cell" ng-repeat="item in event.neededRowsArray()"></td>
+    <td class="cell" ng-repeat="item in rows"></td>
   </tr>
 </table>
