Move calendar to own directive.

--- a/app/partials/calendar/full.html
+++ b/app/partials/calendar/full.html
@@ -1,4 +1,6 @@
-<div class="calendar-toolbar" ng-include="'partials/calendar/toolbar.html'">
-</div>
-<div class="calendar-body" ng-include="'partials/calendar/body.html'">
+<div class="calendar">
+  <div class="calendar-toolbar" ng-include="'partials/calendar/toolbar.html'" ng-show="hasToolbar">
+  </div>
+  <div class="calendar-body" ng-include="'partials/calendar/body.html'">
+  </div>
 </div>
