--- a/app/partials/create-event/general.html
+++ b/app/partials/create-event/general.html
@@ -15,8 +15,8 @@
 
 <a ui-sref="create-event.select-time" fast-link>Select dates</a>
 
-<div class="calendar" ng-include="'partials/calendar/full.html'">
-</div>
+<calendar>
+</calendar>
 
 <input type="submit" fast-click="saveEvent()">
 </div>
