Make small refactoring.

--- a/app/partials/create-event/general.html
+++ b/app/partials/create-event/general.html
@@ -15,7 +15,7 @@
 
 <a ui-sref="create-event.select-time" fast-link>Select dates</a>
 
-<calendar>
+<calendar toggable="true">
 </calendar>
 
 <input type="submit" fast-click="saveEvent()">
