--- a/app/partials/calendar/full.html
+++ b/app/partials/calendar/full.html
@@ -1,5 +1,5 @@
 <div class="calendar">
-  <div class="calendar-toolbar" ng-include="'partials/calendar/toolbar.html'" ng-show="hasToolbar">
+  <div class="calendar-toolbar" ng-include="'partials/calendar/toolbar.html'" ng-hide="noToolbar">
   </div>
   <div class="calendar-body" ng-include="'partials/calendar/body.html'">
   </div>
