--- a/app/partials/create-event/select-time.html
+++ b/app/partials/create-event/select-time.html
@@ -1,4 +1,4 @@
-<table>
+<table class="time-selection">
   <tr ng-repeat="i in timeContainer.rows()">
     <td class="cell time-cell" ng-bind="i|timeFromIndex">
     </td>
