--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,8 @@
 // Partials
 @import "partials/global";
 @import "partials/create-event";
+@import "partials/calendar";
+@import "partials/time-selection";
+
 @import "partials/mobile";
 @import "partials/desktop";
-@import "partials/calendar";
