--- a/app/partials/create-event/select-time.html
+++ b/app/partials/create-event/select-time.html
@@ -1,8 +1,14 @@
 <table class="time-selection">
+  <tr>
+    <td></td>
+    <td ng-repeat="dateInfo in timeContainer.dates">
+      {{ dateInfo.date.toString('MM/dd') }}
+    </td>
+  </tr>
   <tr ng-repeat="i in timeContainer.rows()">
     <td class="cell time-label" ng-bind="i|timeFromIndex">
     </td>
-    <td class="cell" ng-init="time=date[i]" ng-repeat="date in timeContainer.dates" ng-class="{selected: time.isOpened()}">
+    <td class="cell" ng-init="time=date.times[i]" ng-repeat="date in timeContainer.dates" ng-class="{selected: time.isOpened()}">
     </td>
   </tr>
 </table>
