Add selectable-table directive skeleton.

--- a/app/partials/create-event/select-time.html
+++ b/app/partials/create-event/select-time.html
@@ -1,4 +1,4 @@
-<table class="time-selection">
+<table class="time-selection" selectable-table="" start-column="1">
   <tr>
     <td></td>
     <td ng-repeat="dateInfo in timeContainer.dates">
