Enable easy switch between mobile and desktop.

--- a/app/views/app.html
+++ b/app/views/app.html
@@ -1,5 +1,5 @@
-<header class="global" ng-include="" src="'partials/desktop/header.html'"></header>
+<header class="global" ng-include="" src="'partials/' + device + '/header.html'"></header>
 
 <div class="container main-content" ui-view=""></div>
 
-<footer class="global main-content" ng-include="" src="'partials/desktop/footer.html'"></footer>
+<footer class="global main-content" ng-include="" src="'partials/' + device + '/footer.html'"></footer>
