--- a/app/partials/desktop/calendar/full.html
+++ b/app/partials/desktop/calendar/full.html
@@ -1,6 +1,6 @@
 <div class="calendar">
-  <div class="calendar-toolbar" ng-include="'partials/desktop/calendar/toolbar.html'" ng-hide="noToolbar">
+  <div class="calendar-toolbar" ng-include="'partials/' + device + '/calendar/toolbar.html'" ng-hide="noToolbar">
   </div>
-  <div class="calendar-body" ng-include="'partials/desktop/calendar/body.html'">
+  <div class="calendar-body" ng-include="'partials/' + device + '/calendar/body.html'">
   </div>
 </div>
