--- a/app/styles/partials/_base.scss
+++ b/app/styles/partials/_base.scss
@@ -1,8 +1,8 @@
 @import "compass";
 @import "compass/reset";
 
-$header-height: 42px;
 $main-content-width: 60%;
+$main-color: #00796F;
 
 $dark-green: #339933;
 $light-grey: #DCDDDD;
