--- a/app/styles/partials/_create-event.scss
+++ b/app/styles/partials/_create-event.scss
@@ -56,13 +56,14 @@
   line-height: 13px;
   padding-top:0px;
 }
-
+/*
 .notches {
   width:100%;
   height:9px;
-  background: image-url("notches.png") repeat-x;
+  background: image-url("common/notches.png") repeat-x;
   background-size: 9px;
 }
+*/
 
 .tab {
   width:260px;
