--- a/app/partials/desktop/footer.html
+++ b/app/partials/desktop/footer.html
@@ -1,3 +1,4 @@
-<footer>
-Copyright foobar
+<footer class="content">
+  <p><img src="images/common/logo-white.png" alt="MeetUp" class="logo"></p>
+  <p class="copyright">&copy; MeetApp</p>
 </footer>
