--- a/app/styles/partials/_global.scss
+++ b/app/styles/partials/_global.scss
@@ -1,37 +1,262 @@
-header.global {
+button {
+  border: none;
+  font-size:20px;
+}
+.main-color {
+  color: $main-color;
+}
+
+.content {
+  width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+header {
   width: 100%;
-  height: $header-height;
-  background: image-url("header.png") repeat-x;
-  position: fixed;
-  top: 0px;
-  z-index: 2;
-
-  #title-bar {
-    margin: auto;
-  }
-
-  #header-logo {
+  height: 62px;
+  background: image-url("common/header.png") repeat-x;
+  .logo {
     float: left;
-    margin-top:8px;
-    margin-left:6px;
+    margin-top: 15px;
+    margin-left: 6px;
     img {
-      width:120px;
-      height: 100%;
+      width: 168px;
     }
   }
-
-  #header-icon {
-    float: right;
-    margin-top:8px;
-    margin-right:10px;
-    img {
-      width:27px;
-      height: 100%;
+}
+footer {
+  width: 100%;
+  height: 97px;
+  background: image-url("common/footer.png") repeat-x;
+  img {
+    margin-top: 15px;
+    width: 168px;
+  }
+  p {
+    text-align: center;
+    &.copyright {
+      color: white;
+      font-size: 23px;
+      margin-top: 5px;
     }
   }
 }
 
-.container {
-  margin: auto;
-  margin-top: $header-height;
+hr {
+  margin:0;
+  padding:0;
+  &.green {
+  width: 100%;
+  border: 1px dotted #00796F;
+  }
 }
+
+.mainvisual {
+  width: 1200px;
+  height: 546px;
+  margin-left: auto;
+  margin-right: auto;
+  background: image-url("desktop/mainvisual.png") no-repeat;
+  .catch-area {
+    width:400px;
+    position: relative;
+    top: 190px;
+    left: 140px;
+    img.logo {
+      width: 230px;
+    }
+    p {
+      margin-top: 20px;
+      font-size: 23px;
+      color: #777777
+    }
+    button {
+      width: 335px;
+      height: 51px;
+      margin-top: 60px;
+      background: image-url("common/btn-create-event.png")no-repeat;
+      background-size: 335px;
+      color: white;
+      padding-left: 60px;
+      font-size: 18px;
+      cursor: pointer;
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+  }
+}
+.feature-bar {
+  width: 100%;
+  height: 63px;
+  background: image-url("common/back-gray-777.png");
+  .title {
+    width: 378px;
+    margin-left: auto;
+    margin-right: auto;
+    img {
+      width: 142px;
+      float: left;
+      padding-top: 18px;
+    }
+    h2 {
+      color: white;
+      float: left;
+      padding-top: 18px;
+      padding-left: 22px;
+      font-size: 26px;
+    }
+  }
+}
+.feature-contents {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  padding-bottom: 50px;
+  background: image-url("common/back-gray-DDD.png");
+  position: relative;
+  .beat {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    margin-left: -600px;
+    width: 1199px;
+    height: 45px;
+    background: image-url("desktop/h3-beat-all.png") repeat-x;
+  }
+  .feature-box {
+    width: 280px;
+    margin-top: 40px;
+    margin-left: 45px;
+    float: left;
+    h3 {
+      font-size: 30px;
+      font-weight: bold;
+      color: #444;
+      text-align: center;
+      margin-left: -15px;
+    }
+    img {
+      margin-top:18px;
+      height: 100px;
+    }
+    p {
+      font-color: 15px;
+      color: #535353;
+      line-height: 1.4em;
+      margin-top: 17px;
+      b {
+        color: $main-color;
+        font-weight: bold;
+      }
+      &.center {
+        text-align: center;
+      }
+    }
+  }
+}
+.howto-bar {
+  width: 100%;
+  height: 63px;
+  background: image-url("common/back-green-main.png");
+  .title {
+    width: 398px;
+    margin-left: auto;
+    margin-right: auto;
+    img {
+      width: 142px;
+      float: left;
+      padding-top: 18px;
+    }
+    h2 {
+      color: white;
+      float: left;
+      padding-top: 18px;
+      padding-left: 22px;
+      font-size: 26px;
+    }
+  }
+}
+.howto-contents {
+  width: 100%;
+  height: 500px;
+  background: image-url("common/back-green-sub.png");
+  position: relative;
+  .howto-box {
+    width: 280px;
+    margin-top: 40px;
+    margin-left: 45px;
+    float: left;
+    h3 {
+      width: 311px;
+      height: 25px;
+      font-size: 26px;
+      font-weight: bold;
+      color: $main-color;
+      text-align: center;
+      margin-left: -18px;
+      line-height: 0.1em;
+      background: image-url("desktop/h3-arrow-short.png") no-repeat;
+
+    }
+    img {
+      margin-top: 18px;
+      height: 100px;
+    }
+    p {
+      font-color: 15px;
+      color: #535353;
+      line-height: 1.4em;
+      margin-top: 17px;
+      b {
+        color: $main-color;
+        font-weight: bold;
+      }
+      &.center {
+        text-align: center;
+      }
+    }
+  }
+}
+.mainvisual2 {
+  width: 1200px;
+  height: 572px;
+  margin-left: auto;
+  margin-right: auto;
+  background: image-url("desktop/mainvisual2.png") no-repeat;
+  .catch-area {
+    width:400px;
+    position: relative;
+    top: 90px;
+    left: 420px;
+    img.logo {
+      width: 230px;
+      margin-left: 65px;
+    }
+    p {
+      margin-top: 20px;
+      font-size: 23px;
+      color: #777777
+    }
+    button {
+      width: 335px;
+      height: 51px;
+      margin-top: 280px;
+      margin-left:10px;
+      background: image-url("common/btn-create-event.png")no-repeat;
+      background-size: 335px;
+      color: white;
+      padding-left: 60px;
+      font-size: 18px;
+      cursor: pointer;
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+  }
+}
+
+
+
+
+
