--- a/app/partials/desktop/calendar/toolbar.html
+++ b/app/partials/desktop/calendar/toolbar.html
@@ -1,9 +1,7 @@
 <button class="previous" fast-click="calendar.toLastMonth()">
-  Previous
 </button>
 <span class="current-month">
-  {{ calendar.date | date: 'yyyy/MM'}}
+  {{ calendar.date | date: 'yyyy年MM月'}}
 </span>
 <button class="next" fast-click="calendar.toNextMonth()">
-  Next
 </button>
