--- a/app/partials/desktop/create-event/general.html
+++ b/app/partials/desktop/create-event/general.html
@@ -1,22 +1,20 @@
-<div class="action">
-  <span class="label" for="event-name">Event name</span>
-  <input type="text" id="event-name" ng-model="event.name">
-</div>
+<table class="book-left">
+  <tr class="action">
+    <th><span class="label" for="event-name"><small>*</small>イベント名</span></th>
+    <td><input type="text" id="event-name" ng-model="event.name"></td>
+  </tr>
+  <tr class="action">
+    <th><span class="label" for="event-duration"><small>*</small>所要時間</span></th>
+    <td><input type="number" id="event-duration" ng-model="event.duration"></td>
+  </tr>
 
-<div class="action">
-  <span class="label" for="event-duration">Needed time</span>
-  <input type="number" id="event-duration" ng-model="event.duration">
-</div>
-
-<div class="action">
-  <span class="label" for="event-content">Event content</span>
-  <textarea id="event-content" cols="30" rows="10" ng-model="event.description"></textarea>
-</div>
-
-<button ui-sref="create-event.select-time" fast-link ng-disabled="!hasSelectedDates()">Select dates</button>
-
-<calendar toggable="true">
-</calendar>
-
-<input type="submit" fast-click="saveEvent()">
+  <tr class="action">
+    <th><span class="label" for="event-content">詳細・コメント</span></th>
+    <td><textarea id="event-content" cols="30" rows="10" ng-model="event.description"></textarea></td>
+  </tr>
+</table>
+<div class="book-right">
+<span><small>*</small>所要時間</span>
+  <calendar toggable="true">
+  </calendar>
 </div>
