--- a/app/styles/partials/_calendar.scss
+++ b/app/styles/partials/_calendar.scss
@@ -14,3 +14,59 @@
 .unselected {
   background-color: $light-grey;
 }
+
+.current-month {
+  text-align: center;
+  position: relative;
+  top:12px;
+  left: 80px;
+  font-size: 22px;
+}
+
+.previous {
+  width: 16px;
+  height: 23px;
+  float: left;
+  margin-top: 15px;
+  margin-left: 15px;
+  margin-bottom: 30px;
+  background: image-url("common/cal-arrow-left.png") no-repeat;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.7;
+  }
+}
+.next {
+  width: 16px;
+  height: 23px;
+  float: right;
+  margin-top: 15px;
+  margin-right: 15px;
+  margin-bottom: 30px;
+  background: image-url("common/cal-arrow-right.png") no-repeat;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
+.calendar {
+  width: 347px;
+  margin-top:5px;
+  background: image-url("common/back-green-main.png");
+  color: white;
+  font-size:25px;
+  table {
+    width: 346px;
+    background: image-url("common/back-green-sub.png");
+    td {
+      border: 1px solid #339933;
+      color: #444;
+      font-size: 19px;
+      font-weight: bold;
+      text-align: center;
+      padding-top: 8px;
+      padding-bottom: 8px;
+    }
+  }
+}
