--- a/app/styles/partials/_global.scss
+++ b/app/styles/partials/_global.scss
@@ -1,3 +1,6 @@
+body {
+  min-width: 1000px;
+}
 button {
   border: none;
   font-size:20px;
@@ -5,11 +8,18 @@ button {
 .main-color {
   color: $main-color;
 }
-
+.container {
+  width: 100%;
+  height: 100%;
+  background: image-url("common/back-green-sub.png");
+}
 .content {
   width: 1000px;
   margin-left: auto;
   margin-right: auto;
+}
+.white {
+  background: white;
 }
 header {
   width: 100%;
@@ -243,7 +253,7 @@ hr {
       height: 51px;
       margin-top: 280px;
       margin-left:10px;
-      background: image-url("common/btn-create-event.png")no-repeat;
+      background: image-url("common/btn-create-event.png") no-repeat;
       background-size: 335px;
       color: white;
       padding-left: 60px;
@@ -256,7 +266,71 @@ hr {
   }
 }
 
+h1 {
+  &.create-event {
+    font-size: 30px;
+    font-weight: bold;
+    color: #444444;
+    padding-top:10px;
+    padding-left: 65px;
+    width: 909px;
+    height: 93px;
+    position: relative;
+    top: 50px;
+    left: 50%;
+    margin-left: -455px;
+    background: image-url("desktop/h1-create.png") no-repeat;
+  }
+}
 
-
-
-
+.create-book {
+  width: 923px;
+  height: 360px;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  background: image-url("desktop/book-create-event.png") no-repeat;
+  small {
+    color: red;
+    padding-right: 6px;
+  }
+}
+.book-left {
+  float: left;
+  margin-top: 56px;
+  margin-left: 50px;
+  line-height: 3.1em;
+  tr {
+    th {
+      text-align: right;
+      vertical-align: top;
+      color: #777777;
+    }
+    td {
+      text-align: left;
+      padding-left: 30px;
+      input {
+        width:90%;
+        height:25px;
+      }
+    }
+  }
+}
+.book-right {
+  float: right;
+  margin-top: 40px;
+  margin-right: 68px;
+  vertical-align: top;
+  color: #777777;
+}
+input.create-event {
+  width: 749px;
+  height: 51px;
+  margin-top:0px;
+  margin-left: 130px;
+  font-size: 18px;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.7;
+  }
+}
