--- a/app/views/desktop/create-event.html
+++ b/app/views/desktop/create-event.html
@@ -1,7 +1,15 @@
-<h2>
-  Create event
-  <span class="event-name">{{event.name}}</span>
-  <a href="" back-button="">Back</a>
-</h2>
+<div class="container">
+  <div class="content white">
 
-<div ui-view=""></div>
+    <h1 class="create-event">
+      イベントを作成する
+    </h1>
+    <div class="create-book" ui-view=""></div>
+
+<br>
+
+<input class="create-event" type="image" src="images/desktop/btn-create-event-long.png" fast-click="saveEvent()">
+
+
+  </div>
+</div>
