Add support for select-time and calendar on same page.

--- a/app/partials/create-event/general.html
+++ b/app/partials/create-event/general.html
@@ -17,6 +17,8 @@
 
 <calendar toggable="true">
 </calendar>
+<select-time selection-target="possibilities" allow-empty="true">
+</select-time>
 
 <input type="submit" fast-click="saveEvent()">
 </div>
