--- a/app/views/desktop/main.html
+++ b/app/views/desktop/main.html
@@ -4,7 +4,7 @@
       <img src="images/common/logo-green.png" class="logo" alt="MeetUp">
       <p class="description">世界最速のスケジュール調整ツール</p>
     </h1>
-    <button href="#/create-event" fast-link>イベントを作成する</button>
+    <button href="#/events" fast-link>イベントを作成する</button>
   </div>
 </div>
 <div class="feature-bar">
