--- a/app/views/desktop/events.html
+++ b/app/views/desktop/events.html
@@ -4,7 +4,7 @@
     <h1 class="events">
       MeetUpアルファ版リリース打ち上げ！
     </h1>
-    <div class="events-info" ui-view=""></div>
+    <div class="events-info" ng-include src='"partials/" + device + "/events/general.html"'></div>
 
   </div>
 </div>
