--- a/app/styles/partials/_global.scss
+++ b/app/styles/partials/_global.scss
@@ -1,5 +1,6 @@
 body {
   min-width: 1000px;
+  font-family:'Lucida Grande','Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
 }
 button {
   border: none;
@@ -328,8 +329,13 @@ hr {
       text-align: left;
       padding-left: 30px;
       input {
-        width:90%;
-        height:25px;
+        width: 210px;
+        height: 25px;
+      }
+      textarea {
+        max-width: 220px;
+        max-height: 125px;
+        resize:none;
       }
     }
   }
