Add time selection to event creation page.

--- a/app/partials/desktop/create-event/general.html
+++ b/app/partials/desktop/create-event/general.html
@@ -1,20 +1,25 @@
-<table class="book-left">
-  <tr class="action">
-    <th><span class="label" for="event-name"><small>*</small>イベント名</span></th>
-    <td><input type="text" id="event-name" ng-model="event.name"></td>
-  </tr>
-  <tr class="action">
-    <th><span class="label" for="event-duration"><small>*</small>所要時間</span></th>
-    <td><input type="number" id="event-duration" ng-model="event.duration"></td>
-  </tr>
+<div class="main-input">
+  <table class="book-left">
+    <tr class="action">
+      <th><span class="label" for="event-name"><small>*</small>イベント名</span></th>
+      <td><input type="text" id="event-name" ng-model="event.name"></td>
+    </tr>
+    <tr class="action">
+      <th><span class="label" for="event-duration"><small>*</small>所要時間</span></th>
+      <td><input type="number" id="event-duration" ng-model="event.duration"></td>
+    </tr>
 
-  <tr class="action">
-    <th><span class="label" for="event-content">詳細・コメント</span></th>
-    <td><textarea id="event-content" cols="28" rows="10" ng-model="event.description"></textarea></td>
-  </tr>
-</table>
-<div class="book-right">
-<span><small>*</small>所要時間</span>
-  <calendar toggable="true">
-  </calendar>
+    <tr class="action">
+      <th><span class="label" for="event-content">詳細・コメント</span></th>
+      <td><textarea id="event-content" cols="28" rows="10" ng-model="event.description"></textarea></td>
+    </tr>
+  </table>
+  <div class="book-right">
+    <span><small>*</small>所要時間</span>
+    <calendar toggable="true">
+    </calendar>
+  </div>
 </div>
+
+
+
