--- a/app/views/desktop/create-event.html
+++ b/app/views/desktop/create-event.html
@@ -6,10 +6,14 @@
     </h1>
     <div class="create-book" ui-view=""></div>
 
-<br>
+    <input class="create-event" type="image" src="images/desktop/btn-create-event-long.png" fast-click="saveEvent()">
 
-<input class="create-event" type="image" src="images/desktop/btn-create-event-long.png" fast-click="saveEvent()">
+    <div class="time-ouptut">
+      <select-time selection-target="possibilities" allow-empty="true">
+      </select-time>
+    </div>
 
+    <br>
 
   </div>
 </div>
