--- a/app/partials/desktop/create-event/select-time.html
+++ b/app/partials/desktop/create-event/select-time.html
@@ -5,9 +5,8 @@
       {{ dateInfo.date.toString('MM/dd') }}
     </td>
   </tr>
-  <tr ng-repeat="i in timeContainer.rows()" emit-on-render>
-    <td class="cell time-label" ng-bind="i|timeFromIndex">
-    </td>
+  <tr ng-repeat="i in timeContainer.rows()" emit-on-render ng-init="show=i % 2 == 0">
+    <td class="cell" ng-class="{time-label: show}" ng-bind="{true: (i|timeFromIndex), false: ''}[show]"></td>
     <td class="cell" ng-init="time=date.times[i]" ng-repeat="date in timeContainer.dates" ng-class="{selected: time.isOpened()}" emit-on-render="parent">
     </td>
   </tr>
