--- a/app/styles/partials/_global.scss
+++ b/app/styles/partials/_global.scss
@@ -317,7 +317,7 @@ hr {
 .book-left {
   float: left;
   margin-top: 56px;
-  margin-left: 50px;
+  margin-left: 35px;
   line-height: 3.1em;
   tr {
     th {
@@ -329,12 +329,13 @@ hr {
       text-align: left;
       padding-left: 30px;
       input {
-        width: 210px;
+        width: 200px;
         height: 25px;
       }
       textarea {
-        max-width: 220px;
-        max-height: 125px;
+        max-width: 200px;
+        max-height: 128px;
+        margin-bottom: -20px;
         resize:none;
       }
     }
@@ -358,6 +359,39 @@ input.create-event {
     opacity: 0.7;
   }
 }
+
+.time-output {
+  margin-top: 40px;
+  p {
+    text-align: center;
+    color: #777777;
+  }
+  small {
+    color: red;
+    padding-right: 6px;
+  }
+  .overnavi {
+    position: relative;
+    cursor: pointer;
+    .overnavi-left {
+      position: absolute;
+      top: -25px;
+      right: 104px;
+      width: 35px;
+      height: 27px;
+      background: image-url("desktop/overnavi-left-die.png") no-repeat;
+    }
+    .overnavi-right {
+      position: absolute;
+      top: -25px;
+      right: 70px;
+      width: 35px;
+      height: 27px;
+      background: image-url("desktop/overnavi-right.png") no-repeat;
+    }
+  }
+}
+
 
 .events-info {
   width: 923px;
