--- a/app/partials/desktop/create-event/select-time.html
+++ b/app/partials/desktop/create-event/select-time.html
@@ -7,7 +7,7 @@
   </tr>
   <tr ng-repeat="i in timeContainer.rows()" emit-on-render ng-init="show=i % 2 == 0">
     <td class="cell" ng-class="{'time-label': show}" ng-bind="{true: (i|timeFromIndex), false: ''}[show]"></td>
-    <td class="cell" ng-init="time=date.times[i]" ng-repeat="date in timeContainer.dates" ng-class="{selected: time.isOpened()}" emit-on-render="parent">
+    <td class="cell selected-{{time.isOpened()}}" ng-init="time=date.times[i]" ng-repeat="date in timeContainer.dates" emit-on-render="parent">
     </td>
   </tr>
 </table>
