Improve select-time modularization.

--- a/app/styles/partials/_time-selection.scss
+++ b/app/styles/partials/_time-selection.scss
@@ -7,7 +7,7 @@
   border-collapse: separate;
   border-spacing: 1px;
   tr {
-    &.datesonweek {
+    &.days-of-week {
       td {
         padding-top: 10px;
         padding-bottom: 10px;
