fix calendar.scss & time-selection.scss

--- a/app/styles/partials/_time-selection.scss
+++ b/app/styles/partials/_time-selection.scss
@@ -23,8 +23,8 @@
         cursor: image-url("common/cursor/pointer-pen.png") no-repeat;
         &.time-label {
           width: 1%;
-          padding-left: 2%;
-          padding-right: 1%;
+          padding-left: 20px;
+          padding-right: 10px;
           text-align: right;
           font-size: 13px;
           color: #535353;
