--- a/app/styles/partials/_calendar.scss
+++ b/app/styles/partials/_calendar.scss
@@ -78,6 +78,12 @@
         padding-top: 8px;
         padding-bottom: 8px;
       }
+      .past {
+        color: #AAAAAA;
+      }
+      .future {
+        color: #AAAAAA;
+      }
     }
   }
 }
