--- a/app/partials/desktop/create-event/select-time.html
+++ b/app/partials/desktop/create-event/select-time.html
@@ -13,8 +13,10 @@
         {{ dateInfo.date | date:'MM/d（EEE曜）' }}
       </td>
     </tr>
-    <tr ng-repeat="y in rows" emit-on-render ng-init="show=y % 2 == 0">
-      <td class="cell even-time-{{y % 4 == 0}}"
+    <tr class="even-time-{{y % 4 < 2}}"
+        ng-repeat="y in rows"
+        emit-on-render ng-init="show=y % 2 == 0">
+      <td class="cell"
           ng-class="{'time-label': show, hidden: dates.length == 0}"
           ng-bind="{true: (y|timeFromIndex), false: ''}[show]"></td>
       <td class="cell selected-{{isSelected(x, y)}}" ng-repeat="x in daysIndexes" emit-on-render="parent" ng-class="{hidden: x >= dates.length}">
