--- a/app/partials/desktop/create-event/select-time.html
+++ b/app/partials/desktop/create-event/select-time.html
@@ -6,24 +6,28 @@
       <div class="overnavi-right" fast-click="nextPage()" ng-disabled="page >= maxPage()" ng-class="{disabled: page >= maxPage()}"></div>
     </div>
   </div>
-  <table class="time-selection" selectable-table="" start-column="1" start-row="1">
-    <tr class="days-of-week">
-      <td></td>
-      <td ng-repeat="dateInfo in dates">
-        {{ dateInfo.date | date:'MM/d（EEE曜）' }}
-      </td>
-    </tr>
-    <tr class="even-time-{{y % 4 < 2}}"
-        ng-repeat="y in rows"
-        ng-init="show=y % 2 == 0"
-        emit-on-render>
-      <td class="cell"
-          ng-class="{'time-label': show, hidden: dates.length == 0}"
-          ng-bind="{true: (y|timeFromIndex), false: ''}[show]"></td>
-      <td class="cell selected-{{isSelected(x, y)}}"
-          ng-repeat="x in daysIndexes"
-          ng-class="{hidden: x >= dates.length}">
-      </td>
-    </tr>
+  <table class="time-selection" selectable-table="" start-column="1">
+    <thead>
+      <tr class="days-of-week">
+        <td></td>
+        <td ng-repeat="dateInfo in dates">
+          {{ dateInfo.date | date:'MM/d（EEE曜）' }}
+        </td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="even-time-{{y % 4 < 2}}"
+          ng-repeat="y in rows"
+          ng-init="show=y % 2 == 0"
+          emit-on-render>
+        <td class="cell"
+            ng-class="{'time-label': show, hidden: dates.length == 0}"
+            ng-bind="{true: (y|timeFromIndex), false: ''}[show]"></td>
+        <td class="cell selected-{{isSelected(x, y)}}"
+            ng-repeat="x in daysIndexes"
+            ng-class="{hidden: x >= dates.length}">
+        </td>
+      </tr>
+    </tbody>
   </table>
 </div>
