--- a/app/partials/desktop/select-time/main.html
+++ b/app/partials/desktop/select-time/main.html
@@ -1,11 +1,10 @@
 <div class="time-output">
-  <p class="label" for="event-name"><small>*</small>日時候補</p>
-  <div ng-switch="datesNumber > daysPerPage">
-    <div ng-switch-when="true" class="overnavi">
-      <div class="overnavi-left" fast-click="previousPage()" ng-disabled="page <= 1" ng-class="{disabled: page <= 1}"></div>
-      <div class="overnavi-right" fast-click="nextPage()" ng-disabled="page >= maxPage()" ng-class="{disabled: page >= maxPage()}"></div>
-    </div>
-  </div>
+  <p class="label" for="event-name">
+    <small>*</small>日時候補
+  </p>
+
+  <div ng-include src="'partials/desktop/select-time/time-select-control.html'"></div>
+
   <table class="time-selection" selectable-table="" start-column="1">
     <thead>
       <tr class="days-of-week">
